--- a/src/main/resources/assets/wurst/translations/uk_ua.json
+++ b/src/main/resources/assets/wurst/translations/uk_ua.json
@@ -169,6 +169,8 @@
   "gui.wurst.altmanager.folder_error.message": "Можливо, ви випадково заблокували Wurst доступ до цієї папки.\nAltManager не може зашифрувати або розшифрувати ваш альт список без неї.\nВи як і раніше можете використовувати AltManager, але будь-які створені вами альт-профілі не будуть збережені.\n\nПовна помилка має такий вигляд:\n%s",
   "gui.wurst.altmanager.empty.title": "Ваш альт-список порожній.",
   "gui.wurst.altmanager.empty.message": "Бажаєте згенерувати декілька альтів для початку?",
+  "gui.wurst.autofarm.harvest": "Зібрати",
+  "gui.wurst.autofarm.replant": "Посадити знову",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lУВАГА:§r Небезпечний Сервер",
   "gui.wurst.nochatreports.unsafe_server.message": "На цьому сервері потрібно ввімкнути підписи чату, що наражає ваш обліковий запис на ризик отримання шахрайських звітів чату.\n\nВи можете приєднатися до цього сервера, якщо розблокуєте підписи чату, а потім знову підключитесь. Якщо так, подумайте про те, щоб взагалі не використовувати чат. Або грайте на альті, який ви не проти згубити.\n\nЯкщо це ваш сервер, ви можете виправити це, встановивши для 'enforce-secure-profile' значення false у server.properties. У типовому стилі Mojang це налаштування діє протилежно тому, як звучить.",
   "toast.wurst.nochatreports.unsafe_server.title": "На повідомленнях у чаті може бути створено репорт",
