--- a/src/main/resources/assets/wurst/translations/cs_cz.json
+++ b/src/main/resources/assets/wurst/translations/cs_cz.json
@@ -172,6 +172,8 @@
   "gui.wurst.altmanager.folder_error.message": "Možná jste omylem zablokovali Wurstu přístup k této složce.\nAltManager bez ní nemůže šifrovat nebo dešifrovat váš seznam altů.\nStále můžete používat AltManager, ale žádné alty, které nyní vytvoříte, nebudou uloženy.\n\nCelá chyba zní následovně:\n%s",
   "gui.wurst.altmanager.empty.title": "Váš seznam altů je prázdný.",
   "gui.wurst.altmanager.empty.message": "Chcete na začátek nějaké náhodné alty?",
+  "gui.wurst.autofarm.harvest": "Sklidit",
+  "gui.wurst.autofarm.replant": "Znovu zasadit",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lVAROVÁNÍ:§r Nebezpečný server",
   "toast.wurst.nochatreports.unsafe_server.title": "Zprávy v chatu mohou být nahlášeny",
   "toast.wurst.nochatreports.unsafe_server.message": "Zprávy odeslané na tomto serveru mohou být nahlášené do Mojangu, který vás může globálně zabanovat",
