--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -306,6 +306,8 @@
   "gui.wurst.altmanager.folder_error.message": "You may have accidentally blocked Wurst from accessing this folder.\nAltManager cannot encrypt or decrypt your alt list without it.\nYou can still use AltManager, but any alts you create now won't be saved.\n\nThe full error is as follows:\n%s",
   "gui.wurst.altmanager.empty.title": "Your alt list is empty.",
   "gui.wurst.altmanager.empty.message": "Would you like some random alts to get started?",
+  "gui.wurst.autofarm.harvest": "Harvest",
+  "gui.wurst.autofarm.replant": "Replant",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lWARNING:§r Unsafe Server",
   "gui.wurst.nochatreports.unsafe_server.message": "This server requires chat signatures to be enabled, which puts your account at risk of fraudulent chat reports.\n\nYou can chat on this server if you un-block chat signatures and then reconnect. If you do, consider playing on an alt account that you don't mind losing.\n\nIf this is your server, you can fix this by setting 'enforce-secure-profile' to false in server.properties. In typical Mojang fashion, this setting does the opposite of what it sounds like.",
   "toast.wurst.nochatreports.unsafe_server.title": "Chat messages can be reported",
