--- a/src/main/resources/assets/wurst/translations/it_it.json
+++ b/src/main/resources/assets/wurst/translations/it_it.json
@@ -173,6 +173,8 @@
   "gui.wurst.altmanager.folder_error.message": "Potresti aver accidentalmente bloccato l'accesso a questa cartella.\nAltManager non può cifrare o decifrare la tua lista alt senza di essa.\nPuoi ancora usare AltManager, ma qualsiasi alt che crei ora non verrà salvato.\n\nL'errore completo è il seguente:\n%s",
   "gui.wurst.altmanager.empty.title": "La tua lista alt è vuota.",
   "gui.wurst.altmanager.empty.message": "Vorresti creare qualche alt casuale per iniziare?",
+  "gui.wurst.autofarm.harvest": "Raccogli",
+  "gui.wurst.autofarm.replant": "Ripianta",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lATTENZIONE:§r Server Non Sicuro",
   "gui.wurst.nochatreports.unsafe_server.message": "Questo server richiede che le firme di chat siano abilitate, il che mette il tuo account a rischio di chat report.\n\nPuoi unirti a questo server se sblocchi le firme di chat e poi riconnetterti. Se lo fai, considera di non usare la chat. O giocare su un account alt che non ti dispiace perdere.\n\nSe questo è il tuo server, puoi risolvere questo problema impostando 'enforce-secure-profile' su false nelle server.properties. Nell tipico Mojang fashion, questa impostazione fa l'opposto di quello che dice.",
   "toast.wurst.nochatreports.unsafe_server.title": "I messaggi in chat possono essere segnalati",
