--- a/src/main/resources/assets/wurst/translations/ko_kr.json
+++ b/src/main/resources/assets/wurst/translations/ko_kr.json
@@ -143,6 +143,8 @@
   "gui.wurst.altmanager.folder_error.message": "Wurst가 이 폴더에 액세스할 수 없게 블록한 것 같습니다.\nAltManager는 이 폴더 없이 가계정 목록을 암호화하거나 복호화할 수 없습니다.\nAltManager를 계속 사용할 수 있지만, 이제 만드는 가계정은 저장되지 않습니다.\n\n전체 오류는 다음과 같습니다:\n%s",
   "gui.wurst.altmanager.empty.title": "가계정 목록이 비어 있습니다.",
   "gui.wurst.altmanager.empty.message": "시작하기 위해 일부 무작위 알트 계정을 원하시나요?",
+  "gui.wurst.autofarm.harvest": "수확",
+  "gui.wurst.autofarm.replant": "다시 심기",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§l주의:§r 위험한 서버",
   "gui.wurst.nochatreports.unsafe_server.message": "이 서버는 채팅 서명을 활성화해야 하므로 계정이 가짜 채팅 신고의 위험에 노출됩니다.\n\n채팅 서명을 차단하고 다시 연결한 경우 이 서버에서 채팅할 수 있습니다. 그렇다면 계정을 잃어도 상관없는 가계정으로 플레이하는 것을 고려하세요.\n\n이 서버가 소유한 경우 server.properties에서 'enforce-secure-profile'을 false로 설정하여 수정할 수 있습니다. 전형적인 Mojang의 스타일로, 이 설정은 이름이 의미하는 것과 반대로 작동합니다.",
   "toast.wurst.nochatreports.unsafe_server.title": "채팅 메시지가 신고될 수 있습니다",
