--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -173,6 +173,8 @@
   "gui.wurst.altmanager.folder_error.message": "Возможно, вы случайно заблокировали Wurst доступ к этой папке.\nAltManager не может зашифровать или расшифровать ваш альт список без неё.\nВы по-прежнему можете использовать AltManager, но любые созданные вами альт профили не будут сохранены.\n\nПолная ошибка выглядит следующим образом:\n%s",
   "gui.wurst.altmanager.empty.title": "Ваш список альтов пуст.",
   "gui.wurst.altmanager.empty.message": "Хотели бы вы увидеть случайные альты для начала?",
+  "gui.wurst.autofarm.harvest": "Собрать",
+  "gui.wurst.autofarm.replant": "Посадить снова",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lВНИМАНИЕ:§r Небезопасный сервер",
   "gui.wurst.nochatreports.unsafe_server.message": "Этот сервер требует включение подписей, что подвергает ваш аккаунт риску с помощью заведомо ложных чат-репортов.\n\nВы можете присоединиться к этому серверу, если включите функцию подписи чата, а затем снова подключитесь. В противном случае подумайте о том, чтобы вообще не пользоваться чатом. Или играйте на альт-аккаунте, который вы не против потерять.\n\nЕсли это ваш сервер, вы можете исправить ситуацию, установив значение 'enforce-secure-profile' на false в файле server.properties. В типичном стиле Mojang эта настройка делает противоположное тому, как звучит.",
   "toast.wurst.nochatreports.unsafe_server.title": "На сообщения в чате могут пожаловаться",
