--- a/src/main/resources/assets/wurst/translations/tr_tr.json
+++ b/src/main/resources/assets/wurst/translations/tr_tr.json
@@ -295,6 +295,8 @@
   "gui.wurst.altmanager.folder_error.message": "Yanlışlıkla Wurst'un bu klasöre erişimini engellemiş olabilirsiniz.\nAltManager, yan hesap listenizi şifreleyip çözemez.\nYine de AltManager'ı kullanabilirsiniz, ancak şimdi oluşturduğunuz yan hesaplar kaydedilmeyecektir.\n\nTam hata mesajı:\n%s",
   "gui.wurst.altmanager.empty.title": "Yan hesap listeniz boş.",
   "gui.wurst.altmanager.empty.message": "Başlamak için bazı rastgele yan hesaplar ister misiniz?",
+  "gui.wurst.autofarm.harvest": "Hasat Et",
+  "gui.wurst.autofarm.replant": "Yeniden Dik",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lUyarı:§r Güvensiz Sunucu",
   "gui.wurst.nochatreports.unsafe_server.message": "Bu sunucu, sohbet imzalarının etkinleştirilmesini gerektiriyor, bu da hesabınızın sahte sohbet raporları ile tehlikeye girmesine neden olabilir.\n\nBu sunucuda sohbet edebilmek için sohbet imzalarını engelleyebilir ve sonra yeniden bağlanabilirsiniz. Eğer yaparsanız, kaybetmekten çekinmediğiniz bir yan hesap kullanmayı düşünün.\n\nEğer bu sizin sunucunuzsa, bunu server.properties dosyasındaki 'enforce-secure-profile' ayarını false yaparak düzeltebilirsiniz. Tipik Mojang tarzında, bu ayar seslendiği şeyin tam tersini yapmaktadır.",
   "toast.wurst.nochatreports.unsafe_server.title": "Sohbet mesajları raporlanabilir",
