--- a/src/main/resources/assets/wurst/translations/zh_cn.json
+++ b/src/main/resources/assets/wurst/translations/zh_cn.json
@@ -182,6 +182,8 @@
   "gui.wurst.altmanager.folder_error.message": "你也许不小心禁止了 Wurst 访问这个目录，\n因此 AltManager 无法加解密你的备用账户列表。\n你仍然可以使用 AltManager，但你新建的备用账户将不会被保存。\n\n完整错误信息如下：\n%s",
   "gui.wurst.altmanager.empty.title": "你的备用账户列表为空。",
   "gui.wurst.altmanager.empty.message": "你希望 Wurst 生成一些离线账户吗？",
+  "gui.wurst.autofarm.harvest": "收获",
+  "gui.wurst.autofarm.replant": "重新种植",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§l警告:§r 不安全的服务器",
   "gui.wurst.nochatreports.unsafe_server.message": "此服务器需要启用聊天签名，这会使你的帐户面临被举报的风险。\n\n如果你必须重新启用聊天签名才能加入服务器，请考虑不在此服务器发言。或者使用你不介意被封禁的小号进行游戏。\n\n如果这是你的服务器，你可以通过在 server.properties 中将“enforce-secure-profile”设置为 false 来解决此问题。在典型的 Mojang 方法中，这种设置与听起来相反。",
   "toast.wurst.nochatreports.unsafe_server.title": "聊天消息可以被举报",
