--- a/src/main/resources/assets/wurst/translations/zh_tw.json
+++ b/src/main/resources/assets/wurst/translations/zh_tw.json
@@ -173,6 +173,8 @@
   "gui.wurst.altmanager.folder_error.message": "你可能在無意中阻止了 Wurst 訪問這個文件夾。\nAltManager 無法在沒有權限的情況下加密或解密 Alt List。\n你可以繼續使用 AltManager，但是你新建的 Alt 都無法被存儲。\n\n完整的錯誤信息如下：\n%s",
   "gui.wurst.altmanager.empty.title": "你的 Alt List 是空的。",
   "gui.wurst.altmanager.empty.message": "你希望 Wurst 生成一些離綫賬戶嗎？",
+  "gui.wurst.autofarm.harvest": "收穫",
+  "gui.wurst.autofarm.replant": "重新種植",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§l警告：§r不安全的伺服器",
   "gui.wurst.nochatreports.unsafe_server.message": "此伺服器需要啟用聊天簽名，這會使您的帳戶面臨欺詐性聊天檢舉的風險。\n\n如果您取消阻止聊天簽名然後重新連接，則可以加入此服務器。 如果這樣做，請考慮根本不使用聊天。 或者使用您不介意遺失的替代帳戶進行遊戲。\n\n如果這是您的伺服器，您可以通過在 server.properties 中將“enforce-secure-profile”設置為 false 來解決此問題。 在典型的 Mojang 方法中，這種設定與聽起來相反。",
   "toast.wurst.nochatreports.unsafe_server.title": "可以檢舉聊天訊息",
