--- a/src/main/resources/assets/wurst/translations/fr_fr.json
+++ b/src/main/resources/assets/wurst/translations/fr_fr.json
@@ -170,6 +170,7 @@
   "gui.wurst.altmanager.folder_error.message": "Vous avez peut-être accidentellement bloqué l'accès de Wurst à ce dossier.\nL'AltManager ne peut pas chiffrer ou déchiffrer votre liste d'alt sans lui.\nVous pouvez toujours utiliser l'AltManager, mais les alts que vous créez maintenant ne seront pas enregistrés.\n\nL'erreur complète est la suivante :\n%s",
   "gui.wurst.altmanager.empty.title": "Votre liste d'alt est vide.",
   "gui.wurst.altmanager.empty.message": "Aimeriez-vous quelques alts aléatoires pour commencer ?",
+  "gui.wurst.autofarm.all_plant_types": "Tous les types de plantes",
   "gui.wurst.autofarm.harvest": "Récolter",
   "gui.wurst.autofarm.replant": "Replanter",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lATTENTION :§r Serveur non protégé",
