--- a/src/main/resources/assets/wurst/translations/it_it.json
+++ b/src/main/resources/assets/wurst/translations/it_it.json
@@ -173,6 +173,7 @@
   "gui.wurst.altmanager.folder_error.message": "Potresti aver accidentalmente bloccato l'accesso a questa cartella.\nAltManager non può cifrare o decifrare la tua lista alt senza di essa.\nPuoi ancora usare AltManager, ma qualsiasi alt che crei ora non verrà salvato.\n\nL'errore completo è il seguente:\n%s",
   "gui.wurst.altmanager.empty.title": "La tua lista alt è vuota.",
   "gui.wurst.altmanager.empty.message": "Vorresti creare qualche alt casuale per iniziare?",
+  "gui.wurst.autofarm.all_plant_types": "Tutti i tipi di piante",
   "gui.wurst.autofarm.harvest": "Raccogli",
   "gui.wurst.autofarm.replant": "Ripianta",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lATTENZIONE:§r Server Non Sicuro",
