--- a/src/main/resources/assets/wurst/translations/ja_jp.json
+++ b/src/main/resources/assets/wurst/translations/ja_jp.json
@@ -246,6 +246,7 @@
   "gui.wurst.altmanager.folder_error.message": "Wurstのフォルダーへのアクセス権限を拒否してしまっている可能性があります。\nアクセス権限がないと、AltManagerはAltリストを暗号化および複合化することができません。\n引き続きAltManagerを使用することはできますが、新たに作成したAltは保存されません。\n\nエラーの全容:\n%s",
   "gui.wurst.altmanager.empty.title": "Altリストは空です。",
   "gui.wurst.altmanager.empty.message": "手始めに、ランダムなAltをいくつか追加しますか？",
+  "gui.wurst.autofarm.all_plant_types": "すべての植物の種類",
   "gui.wurst.autofarm.harvest": "収穫",
   "gui.wurst.autofarm.replant": "植え直し",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§l警告:§r 安全でないサーバー",
