--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -173,6 +173,7 @@
   "gui.wurst.altmanager.folder_error.message": "Возможно, вы случайно заблокировали Wurst доступ к этой папке.\nAltManager не может зашифровать или расшифровать ваш альт список без неё.\nВы по-прежнему можете использовать AltManager, но любые созданные вами альт профили не будут сохранены.\n\nПолная ошибка выглядит следующим образом:\n%s",
   "gui.wurst.altmanager.empty.title": "Ваш список альтов пуст.",
   "gui.wurst.altmanager.empty.message": "Хотели бы вы увидеть случайные альты для начала?",
+  "gui.wurst.autofarm.all_plant_types": "Все виды растений",
   "gui.wurst.autofarm.harvest": "Собрать",
   "gui.wurst.autofarm.replant": "Посадить снова",
   "gui.wurst.nochatreports.unsafe_server.title": "§4§lВНИМАНИЕ:§r Небезопасный сервер",
