Refactor TakeItemsFrom settings

--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -74,6 +74,7 @@
   "description.wurst.hack.blink": "Suspends all motion updates while enabled.",
   "description.wurst.hack.boatfly": "Allows you to fly with boats and other vehicles.\nPress the sprint key to go down faster.",
   "description.wurst.hack.bonemealaura": "Automatically uses bone meal on specific types of plants.\nUse the checkboxes to specify the types of plants.",
+  "description.wurst.setting.bonemealaura.take_items_from": "Where to look for bone meal.",
   "description.wurst.hack.bowaimbot": "Automatically aims your bow or crossbow.",
   "description.wurst.hack.buildrandom": "Randomly places blocks around you.",
   "description.wurst.setting.buildrandom.face_target": "How BuildRandom should face the randomly placed blocks.",
@@ -97,6 +98,7 @@
   "description.wurst.hack.crystalaura": "Automatically places (optional) and detonates end crystals to kill entities around you.",
   "description.wurst.setting.crystalaura.face_target": "How CrystalAura should face the end crystals.",
   "description.wurst.setting.crystalaura.swing_hand": "How CrystalAura should swing your hand when placing and detonating end crystals.",
+  "description.wurst.setting.crystalaura.take_items_from": "Where to look for end crystals.",
   "description.wurst.hack.derp": "Randomly moves your head around.\nOnly visible to other players.",
   "description.wurst.hack.dolphin": "Makes you bob up in water automatically.\n(just like a dolphin)",
   "description.wurst.hack.excavator": "Automatically breaks all blocks in the selected area.",
@@ -293,6 +295,9 @@
   "description.wurst.setting.generic.swing_hand.off": "Don't swing your hand at all. Will be detected by anti-cheat plugins.",
   "description.wurst.setting.generic.swing_hand.server": "Swing your hand on the server-side, without playing the animation on the client-side.",
   "description.wurst.setting.generic.swing_hand.client": "Swing your hand on the client-side. This is the most legit option.",
+  "description.wurst.setting.generic.take_items_from.hands": "Only use items that are already in your hands. Won't move any items.",
+  "description.wurst.setting.generic.take_items_from.hotbar": "Search for items in your hotbar. If found, they will be selected automatically.",
+  "description.wurst.setting.generic.take_items_from.inventory": "Search for items in your entire inventory. If found, they will be moved to your hotbar and then selected.",
   "description.wurst.altmanager.premium": "This alt has a password and can join all servers.",
   "description.wurst.altmanager.cracked": "This alt has no password and will only work on cracked servers.",
   "description.wurst.altmanager.failed": "Last time you tried to log in with this alt, it didn't work.",
