Replace BonemealAura mode with more granular settings

--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -74,6 +74,13 @@
   "description.wurst.hack.blink": "Suspends all motion updates while enabled.",
   "description.wurst.hack.boatfly": "Allows you to fly with boats and other vehicles.\nPress the sprint key to go down faster.",
   "description.wurst.hack.bonemealaura": "Automatically uses bone meal on specific types of plants.\nUse the checkboxes to specify the types of plants.",
+  "description.wurst.setting.bonemealaura.multimeal": "Uses bone meal on multiple plants at once.\nFaster, but can be detected by anti-cheat plugins.",
+  "description.wurst.setting.bonemealaura.check_los": "Ensures that BonemealAura won't try to reach through blocks when using bone meal.\nSlower, but can help with anti-cheat plugins.",
+  "description.wurst.setting.bonemealaura.face_target": "How BonemealAura should face the plants when using bone meal.",
+  "description.wurst.setting.bonemealaura.swing_hand": "How BonemealAura should swing your hand when using bone meal.",
+  "description.wurst.setting.bonemealaura.always_fastplace": "Uses bone meal as if FastPlace was enabled, even if it's not.",
+  "description.wurst.setting.bonemealaura.use_while_breaking": "Uses bone meal even while you are breaking a block.\nPossible with hacks, but wouldn't work in vanilla. May look suspicious.",
+  "description.wurst.setting.bonemealaura.use_while_riding": "Uses bone meal even while you are riding a vehicle.\nPossible with hacks, but wouldn't work in vanilla. May look suspicious.",
   "description.wurst.setting.bonemealaura.take_items_from": "Where to look for bone meal.",
   "description.wurst.hack.bowaimbot": "Automatically aims your bow or crossbow.",
   "description.wurst.hack.buildrandom": "Randomly places blocks around you.",
