--- a/src/main/resources/assets/wurst/translations/zh_cn.json
+++ b/src/main/resources/assets/wurst/translations/zh_cn.json
@@ -1,8 +1,26 @@
 {
   "description.wurst.hack.aimassist": "帮助你瞄准附近的实体。",
+  "description.wurst.setting.aimassist.fov": "视野范围 - 实体需在准星多大范围内才会被瞄准，超出则忽略。\n360° = 瞄准你周围所有实体。",
+  "description.wurst.setting.aimassist.ignore_mouse_input": "瞄准辅助生效时，忽略部分鼠标输入。可避免你意外瞄准偏离目标。",
+  "description.wurst.setting.aimassist.check_line_of_sight": "不会瞄准方块后方的实体。",
+  "description.wurst.setting.aimassist.aim_while_blocking": "使用盾牌格挡或手持物品时，仍持续瞄准实体。",
   "description.wurst.hack.airplace": "允许你在空中放置方块。",
-  "description.wurst.hack.anchoraura": "自动放置（可选），充能，引爆重生锚并击杀你附近的实体。",
+  "description.wurst.setting.airplace.guide": "显示方块放置位置的引导提示。",
+  "description.wurst.setting.airplace.guide_color": "若启用引导提示，此选项设置其颜色。",
+  "description.wurst.hack.anchoraura": "自动放置（可选）、充能并引爆重生锚，击杀你附近的实体。",
+  "description.wurst.setting.anchoraura.range": "决定重生锚光环的作用范围，包括放置、充能和引爆重生锚的距离。",
+  "description.wurst.setting.anchoraura.auto-place_anchors": "启用时，重生锚光环会在有效实体附近自动放置重生锚。\n禁用时，仅对手动放置的重生锚进行充能和引爆。",
+  "description.wurst.setting.anchoraura.face_target": "重生锚光环应如何朝向重生锚",
+  "description.wurst.setting.anchoraura.check_line_of_sight": "确保放置或右键点击重生锚时，不会穿透方块。\n\n速度较慢，但可规避部分反作弊插件检测。",
+  "description.wurst.setting.anchoraura.swing_hand": "重生锚光环在放置、充能和引爆重生锚时，应如何挥动你的手。",
+  "description.wurst.setting.anchoraura.take_items_from": "从何处获取重生锚和荧石。",
   "description.wurst.hack.antiafk": "随机走动，用于避免服务器挂机检测。",
+  "description.wurst.setting.antiafk.use_ai": "使用寻路AI自然移动，规避危险。\n有时可能会卡住。",
+  "description.wurst.setting.antiafk.ai_range": "启用AI移动时，防挂机功能的活动范围。",
+  "description.wurst.setting.antiafk.non-ai_range": "禁用AI移动时，防挂机功能的活动范围。\n\n§c§l警告：§r 该区域必须完全无遮挡且无任何危险。",
+  "description.wurst.setting.antiafk.wait_time": "两次移动之间的间隔时间（秒）。",
+  "description.wurst.setting.antiafk.wait_time_randomization": "可在间隔时间基础上随机增减的时长（秒）。",
+  "description.wurst.setting.antiafk.show_wait_time": "在功能列表中显示剩余等待时间。",
   "description.wurst.hack.antiblind": "防止失明和黑暗效果。\n与 OptiFine 不兼容。",
   "description.wurst.hack.anticactus": "保护你免受仙人掌伤害。",
   "description.wurst.hack.antientitypush": "保护你不会被玩家和其他生物推挤。",
@@ -12,6 +30,7 @@
   "description.wurst.hack.antiwaterpush": "防止你被水流推动。",
   "description.wurst.hack.antiwobble": "禁用由反胃和传送门动画引起的视觉扭曲。",
   "description.wurst.hack.arrowdmg": "大幅增加箭的伤害，但也会消耗大量饥饿值并降低准确性。\n\n不适用于弩，并且似乎已在Paper类服务器上修复。",
+  "description.wurst.setting.arrowdmg.strength": "效果强度。截至我的世界1.21版本，最高为10。",
   "description.wurst.setting.arrowdmg.trident_yeet_mode": "打开之后，三叉戟将飞得更远。似乎不影响伤害以及“激流”魔咒。\n\n§c§l警告：§r打开这个选项之后你很容易弄丢你的三叉戟！",
   "description.wurst.hack.autoarmor": "自动管理你的盔甲。",
   "description.wurst.hack.autobuild": "自动建筑东西。\n放一个方块就开始自动建造。",
@@ -19,6 +38,8 @@
   "description.wurst.hack.autodrop": "自动丢弃你不想要的物品（可以预设）。",
   "description.wurst.hack.autoleave": "血量过低时自动离开服务器。",
   "description.wurst.hack.autolibrarian": "自动训练村民成为图书管理员，出售特定的附魔书。 通过这个技术，你可以立即建立一个完整的村民交易所。",
+  "description.wurst.setting.autolibrarian.face_target": "自动图书管理员应如何朝向村民和工作站点。",
+  "description.wurst.setting.autolibrarian.swing_hand": "自动图书管理员与村民和工作站点交互时，应如何挥动你的手。",
   "description.wurst.hack.autoeat": "当必要的时候将会自动进食（可以预设）。",
   "description.wurst.setting.autoeat.target_hunger": "在不浪费任何饥饿值的前提下，尝试将饥饿条保持在此水准之上。",
   "description.wurst.setting.autoeat.min_hunger": "即便浪费一些补充的饥饿值，也总是将饥饿条保持在此水准之上。\n6.5 - 不会导致任何原版食物所补充饥饿值的浪费。\n10.0 - 完全忽视饥饿值的浪费，总是将饥饿条补满。",
@@ -30,6 +51,8 @@
   "description.wurst.setting.autoeat.allow_poison": "食用有毒的食物会带来持续伤害。\n不推荐。",
   "description.wurst.setting.autoeat.allow_chorus": "食用紫颂果会将你随机传送。\n不推荐。",
   "description.wurst.hack.autofarm": "自动种植与收获农作物。",
+  "description.wurst.setting.autofarm.check_line_of_sight": "确保种植和收获时，不会穿透方块进行操作。",
+  "description.wurst.setting.autofarm.face_target": "自动农场在种植和收获时，应如何朝向农作物。",
   "description.wurst.setting.autofarm.swing_hand": "设置 AutoFarm 在种植和收获时如何挥动你的手。",
   "description.wurst.hack.autofish": "当你在钓鱼的时切换到最好的鱼竿并自动钓鱼。",
   "description.wurst.hack.automine": "自动挖掘你准星所指的方块。",
@@ -53,18 +76,27 @@
   "description.wurst.hack.bonemealaura": "往指定的作物上自动使用骨粉。\n使用复选框来指定作物。",
   "description.wurst.hack.bowaimbot": "当你使用弓或弩时自动瞄准所设定的实体。",
   "description.wurst.hack.buildrandom": "在你的附近随机放置方块。",
+  "description.wurst.setting.buildrandom.face_target": "随机建造功能应如何朝向随机放置的方块。",
+  "description.wurst.setting.buildrandom.swing_hand": "随机建造功能在放置方块时，应如何挥动你的手。",
   "description.wurst.hack.bunnyhop": "让你自动跳跃，但不能做到像 CSGO 一样。",
   "description.wurst.hack.cameradistance": "允许你更改第三人称的相机距离。",
   "description.wurst.hack.cameranoclip": "在第三人称下，可以忽视墙体碰撞而直接把视角穿过去。",
   "description.wurst.hack.cavefinder": "帮助你找到洞穴并以所选的颜色将他们高亮。",
   "description.wurst.hack.chattranslator": "利用 Google 翻译翻译聊天框内的信息（在中国大陆不起效，除非你懂得如何重新起效）。",
+  "description.wurst.setting.chattranslator.your_language": "你使用和理解的主要语言。\n\n收到的消息将始终翻译为此语言（若启用翻译功能）。\n\n关闭“检测发送语言”时，所有发送的消息将默认为此语言。",
+  "description.wurst.setting.chattranslator.other_language": "服务器其他玩家使用的主要语言。\n\n发送的消息将始终翻译为此语言（若启用翻译功能）。\n\n关闭“检测接收语言”时，所有收到的消息将默认为此语言。",
+  "description.wurst.setting.chattranslator.detect_received_language": "自动检测收到消息的语言。\n\n适用于其他玩家使用多种语言的场景。\n\n若所有人使用同一语言，关闭此选项可提高翻译准确性。",
+  "description.wurst.setting.chattranslator.detect_sent_language": "自动检测发送消息的语言。\n\n适用于你使用多种语言的场景。\n\n若你始终使用同一语言，关闭此选项可提高翻译准确性。",
+  "description.wurst.setting.chattranslator.filter_own_messages": "不会翻译看起来是你发送的消息。\n\n通过常见聊天格式（如“<名称>”“[名称]”或“名称：”）检测你的消息，部分服务器可能识别不准确。",
   "description.wurst.hack.chestesp": "以所设定的颜色高亮附近的箱子(包括潜影盒、陷阱箱和末影箱）。",
   "description.wurst.hack.clickaura": "当瞄准的时候。自动攻击你附近有效的实体\n\n§c§l警告：§r 此功能通常来说比 Killaura 更加容易被发现或检测，因此推荐使用 Killaura 或者 TriggerBot 代替。",
   "description.wurst.hack.clickgui": "基于窗口的点击式 GUI（有分类）。",
-  "description.wurst.hack.crashchest": "生成一个箱子，当玩家复制大量的箱子在他们背包里面时容易被封禁。 §c§l警告：§r §c这无法撤销，请小心使用！§r\n\n如果这个箱子被复制出来放在箱子里，无论谁打开箱子都会被踢出服务器（只需放一个）。",
+  "description.wurst.hack.crashchest": "生成一个特殊箱子，若玩家背包中存在过多该箱子副本，可能会被服务器封禁。 §c§l警告：§r §c此操作无法撤销，请谨慎使用！§r\n\n若将副本放入箱子，任何打开该箱子的玩家都会被踢出服务器（仅一次）。",
   "description.wurst.hack.creativeflight": "类似创造模式的飞行（即双击空格起飞）。\n\n§c§l警告：§r 如果你不使用 NoFall，依然会受到摔落伤害。",
   "description.wurst.hack.criticals": "使你每次攻击都打出暴击。",
   "description.wurst.hack.crystalaura": "自动放置（可选）并引爆末影水晶来杀死你附近的实体。",
+  "description.wurst.setting.crystalaura.face_target": "末影水晶光环应如何朝向末影水晶。",
+  "description.wurst.setting.crystalaura.swing_hand": "末影水晶光环在放置和引爆末影水晶时，应如何挥动你的手。",
   "description.wurst.hack.derp": "让你的头疯狂地到处随机转动。\n仅限其他玩家可见。",
   "description.wurst.hack.dolphin": "让你在水中漂浮。\n（就像海豚一样）",
   "description.wurst.hack.excavator": "自动破坏所选区域内的所有方块。",
@@ -78,6 +110,22 @@
   "description.wurst.hack.fish": "关闭水底的重力，使你可以像鱼一样游泳。",
   "description.wurst.hack.flight": "允许你飞天。\n\n§c§l警告：§r 如果你不使用 NoFall，依然会受到摔落伤害。",
   "description.wurst.hack.follow": "自动跟随最近的实体。\n非常恼人。\n\n使用 .follow 指令跟随特定的实体。",
+  "description.wurst.setting.follow.filter_players": "不会跟随其他玩家。",
+  "description.wurst.setting.follow.filter_sleeping": "不会跟随正在睡觉的玩家。",
+  "description.wurst.setting.follow.filter_flying": "不会跟随距离地面超过设定高度的飞行玩家。",
+  "description.wurst.setting.follow.filter_neutral": "不会跟随中立生物（如末影人、狼）。",
+  "description.wurst.setting.follow.filter_bats": "不会跟随蝙蝠及模组添加的其他“环境类”生物。",
+  "description.wurst.setting.follow.filter_pets": "不会跟随已驯服的狼、马等宠物。",
+  "description.wurst.setting.follow.filter_villagers": "不会跟随村民和流浪商人。",
+  "description.wurst.setting.follow.filter_zombie_villagers": "不会跟随僵尸村民。",
+  "description.wurst.setting.follow.filter_golems": "不会跟随铁傀儡和雪傀儡。",
+  "description.wurst.setting.follow.filter_zombie_piglins": "不会跟随僵尸猪灵。",
+  "description.wurst.setting.follow.filter_endermen": "不会跟随末影人。",
+  "description.wurst.setting.follow.filter_shulkers": "不会跟随潜影贝。",
+  "description.wurst.setting.follow.filter_allays": "不会跟随悦灵。",
+  "description.wurst.setting.follow.filter_invisible": "不会跟随隐身实体。",
+  "description.wurst.setting.follow.filter_armor_stands": "不会跟随盔甲架。",
+  "description.wurst.setting.follow.filter_minecarts": "不会跟随矿车。",
   "description.wurst.hack.forceop": "破解 AuthMe 登录插件密码。\n一般用于获得 OP。（PS：只是跑密码的软件）",
   "description.wurst.hack.freecam": "允许在不移动你角色的情况下自由移动摄像机。（效果类似灵魂出窍）",
   "description.wurst.hack.fullbright": "可以在黑暗中看的一清二楚。",
@@ -87,6 +135,7 @@
   "description.wurst.hack.healthtags": "在玩家名字旁边显示血量。",
   "description.wurst.hack.highjump": "使你跳的更高。\n\n§c§l警告：§r 如果你不使用 NoFall，依然会受到摔落伤害。",
   "description.wurst.hack.infinichat": "移除聊天栏的 256 字符限制。\n一般用于编辑 NBT 的指令。\n\n§6§l注意：§r不推荐用于和别人聊天。大多数服务器一般超过 256 字符就会无法显示后面的内容。",
+  "description.wurst.hack.instabuild": "类似自动建造，但尝试在一个游戏刻内完成整个模板建造。\n仅适用于非常简单的模板。",
   "description.wurst.hack.instantbunker": "建造一个小小的火柴盒，需要57个方块。",
   "description.wurst.hack.invwalk": "允许你在物品栏打开时移动。",
   "description.wurst.setting.invwalk.allow_clickgui": "允许你在 Wurst 的 ClickGUI 打开时移动。",
@@ -96,15 +145,25 @@
   "description.wurst.hack.jesus": "允许你走在水面上。\n2000年前耶稣曾经用过这个功能。",
   "description.wurst.hack.jetpack": "使你像有喷气背包一样飞行。\n\n§c§l警告：§r 如果你不使用 NoFall，依然会受到摔落伤害。",
   "description.wurst.hack.kaboom": "像爆炸一样破坏你附近的方块。\n如果服务器没有反作弊的话，这个可能比 Nuker 功能破坏得更快，使用适合的工具和破坏脆弱的方块可以事半功倍。\n注意：这并不是真正的爆炸。",
+  "description.wurst.setting.kaboom.power": "决定每个方块将发送多少组破坏方块的数据包。\n\n数值越高，破坏方块的概率越大，但会给服务器带来额外负载。高数值可能导致小型服务器崩溃。",
+  "description.wurst.setting.kaboom.sound": "是否播放爆炸音效。不影响方块破坏，仅你自己可听到。",
+  "description.wurst.setting.kaboom.particles": "是否显示爆炸粒子。不影响方块破坏，仅你自己可看到。",
   "description.wurst.hack.killauralegit": "KillauraLegit 更难被反作弊检测。\n在正常的 NoCheat+（NCP）服务器上不需要！",
   "description.wurst.hack.killaura": "自动攻击你附近的实体。",
   "description.wurst.hack.killpotion": "生成一个能杀死绝大多数生物（包括创造模式的玩家）的药水，但对那些亡灵生物或者已死生物无效。\n\n需要在创造模式下。",
   "description.wurst.hack.liquids": "取消无法把方块直接放置在水中的限制，允许你直接在水方块中放置方块。",
   "description.wurst.hack.lsd": "让你像吃了云南蘑菇一样。",
+  "description.wurst.hack.macedmg": "使用钉头锤攻击时，增加伤害。",
   "description.wurst.hack.masstpa": "给每个人发送 TPA 请求。\n\n§c§l警告：§r当在国内服务器使用会因为 Wurst 无法判断中文返回消息而导致 TPA 请求继续。",
   "description.wurst.hack.mileycyrus": "类似疯狂按 Shift 潜行。",
   "description.wurst.hack.mobesp": "高亮附近的生物。",
   "description.wurst.hack.mobspawnesp": "高亮生物可以生成的区域。",
+  "description.wurst.setting.mobspawnesp.hitbox_check": "通过忽略过小无法生成生物的黑暗区域，提高生物生成高亮的准确性，但可能影响性能和/或稳定性。",
+  "description.wurst.setting.mobspawnesp.hitbox_check.off": "关闭碰撞箱检测。",
+  "description.wurst.setting.mobspawnesp.hitbox_check.slow": "同步碰撞箱检测。不会导致崩溃，但对游戏性能影响较大。",
+  "description.wurst.setting.mobspawnesp.hitbox_check.unstable": "快速但不稳定的碰撞箱检测。已知有时会导致游戏崩溃。",
+  "description.wurst.setting.mobspawnesp.night_color": "夜间生物可生成位置的 X 标记颜色。",
+  "description.wurst.setting.mobspawnesp.day_color": "全天候生物可生成位置的 X 标记颜色。",
   "description.wurst.hack.multiaura": "比 Killaura 更高级，能同时攻击多个实体。",
   "description.wurst.hack.nameprotect": "隐藏所有玩家的名字。",
   "description.wurst.hack.nametags": "改变名字大小使你更容易看到他们，同时也能让你看到那些潜行玩家的名字。",
@@ -114,6 +173,8 @@
   "description.wurst.hack.noclip": "允许你自由地穿过方块。\n一个可以掉落的方块（例如：沙子）掉在你的头顶才能激活。\n\n§c§l警告：§r 你会在你穿墙时受到伤害！",
   "description.wurst.hack.nocomcrash": "利用 Nocom 漏洞使服务器卡顿或崩溃。\n经测试可在 Vanilla、Spigot 和 Fabric 上工作，Paper 和一些拥有特定反作弊的服务器无法使用。",
   "description.wurst.hack.nofall": "使你免受摔落伤害。",
+  "description.wurst.setting.nofall.allow_elytra": "同时尝试在使用鞘翅飞行时防止摔落伤害。\n\n§c§l警告：§r 有时可能导致你意外停止飞行。",
+  "description.wurst.setting.nofall.pause_for_mace": "手持钉头锤时暂停防摔落伤害功能，以便利用钉头锤的坠落距离伤害加成。\n\n§c§l警告：§r 手持钉头锤时，你将不再受到防摔落伤害保护。此外，坠落过程中切换至钉头锤或切换离开，可能中断坠落状态，导致受到伤害。",
   "description.wurst.hack.nofireoverlay": "关闭第一人称视角下着火时的火焰贴图。\n\n§c§l警告：§r这可能会导致你因不知道身上有火而烧伤致死。",
   "description.wurst.hack.nofog": "移除世界天边交界处的迷雾。",
   "description.wurst.hack.nohurtcam": "关闭因受伤而产生视野摇晃效果。",
@@ -122,6 +183,7 @@
   "description.wurst.hack.nopumpkin": "关闭南瓜头的视野阻挡。",
   "description.wurst.hack.noshieldoverlay": "降低盾牌使其覆盖更少的屏幕。",
   "description.wurst.hack.noslowdown": "取消在蜂蜜、灵魂沙上或使用物品时产生的减速效果。",
+  "description.wurst.hack.novignette": "移除屏幕边缘的暗角效果。",
   "description.wurst.hack.noweather": "允许你更改本地客户端的天气，时间和月相（仅在本地生效，与服务器无关）。",
   "description.wurst.hack.noweb": "使你不会因为蜘蛛网而减速。",
   "description.wurst.hack.nuker": "自动挖掘你附近的方块。",
@@ -140,6 +202,21 @@
   "description.wurst.hack.rainbowui": "§c让§a每§9一§c样§a都§9充§c满§a五§9彩§c斑§a斓§9的§c样§a子§9，§c包§a括§9你§c当§a前§9所§c在 §aU§9I",
   "description.wurst.hack.reach": "允许你碰到更远的距离。",
   "description.wurst.hack.remoteview": "允许你以另一个视角观看世界。\n使用 .rv 指令来指定一个特定的实体。",
+  "description.wurst.setting.remoteview.filter_players": "不会查看其他玩家的视角。",
+  "description.wurst.setting.remoteview.filter_sleeping": "不会查看正在睡觉的玩家的视角。",
+  "description.wurst.setting.remoteview.filter_flying": "不会查看距离地面超过设定高度的飞行玩家的视角。",
+  "description.wurst.setting.remoteview.filter_neutral": "不会查看中立生物（如末影人、狼）的视角。",
+  "description.wurst.setting.remoteview.filter_bats": "不会查看蝙蝠及模组添加的其他“环境类”生物的视角。",
+  "description.wurst.setting.remoteview.filter_pets": "不会查看已驯服的狼、马等宠物的视角。",
+  "description.wurst.setting.remoteview.filter_villagers": "不会查看村民和流浪商人的视角。",
+  "description.wurst.setting.remoteview.filter_zombie_villagers": "不会查看僵尸村民的视角。",
+  "description.wurst.setting.remoteview.filter_golems": "不会查看铁傀儡和雪傀儡的视角。",
+  "description.wurst.setting.remoteview.filter_zombie_piglins": "不会查看僵尸猪灵的视角。",
+  "description.wurst.setting.remoteview.filter_endermen": "不会查看末影人的视角。",
+  "description.wurst.setting.remoteview.filter_shulkers": "不会查看潜影贝的视角。",
+  "description.wurst.setting.remoteview.filter_allays": "不会查看悦灵的视角。",
+  "description.wurst.setting.remoteview.filter_invisible": "不会查看隐身实体的视角。",
+  "description.wurst.setting.remoteview.filter_armor_stands": "不会查看盔甲架的视角。",
   "description.wurst.hack.restock": "自动从背包中取出指定物品来补充手中的消耗，建议与 FastPlace 一起使用。",
   "description.wurst.hack.safewalk": "防止你从方块边缘摔落。",
   "description.wurst.hack.scaffoldwalk": "自动在你的脚下搭方块。",
@@ -151,6 +228,7 @@
   "description.wurst.hack.speednuker": "一个比 Nuker 更快的版本，但无法绕过反作弊。",
   "description.wurst.hack.spider": "允许你像蜘蛛一样爬墙。",
   "description.wurst.hack.step": "允许你走上更高（取决于你的设定）的方块。（类似你走上半砖的效果）",
+  "description.wurst.hack.templatetool": "通过扫描现有建筑，为自动建造功能创建自定义模板。",
   "description.wurst.hack.throw": "多次使用你手中的物品，可以用于丢雪球、鸡蛋、刷怪蛋、矿车，诸如此类。\n\n会生成大量的数量，这会产生巨大的延迟且可能导致服务器崩溃。",
   "description.wurst.hack.tillaura": "自动将泥土、草块等方块转化为耕地。\n不要和 Killaura 搞混。",
   "description.wurst.hack.timer": "改变大部分东西的速度。",
@@ -159,16 +237,62 @@
   "description.wurst.hack.tp-aura": "自动传送到实体附近并自动攻击。",
   "description.wurst.hack.trajectories": "预测箭和投掷物品的飞行路径。",
   "description.wurst.hack.treebot": "实验性的自动砍树机器人。\n目前仅限于砍小树。",
+  "description.wurst.setting.treebot.face_target": "自动砍树机器人在破坏原木和树叶时，应如何朝向目标。",
+  "description.wurst.setting.treebot.swing_hand": "自动砍树机器人在破坏原木和树叶时，应如何挥动你的手。",
   "description.wurst.hack.triggerbot": "自动攻击准星所指的实体。",
+  "description.wurst.setting.triggerbot.swing_hand": "触发式攻击在攻击时应如何挥动你的手。（若启用“模拟鼠标点击”，此设置将失效。）",
   "description.wurst.hack.trollpotion": "生成一个恼人的药水效果。\n§o需要创造模式。§r",
   "description.wurst.hack.truesight": "允许你看到隐身的实体。",
   "description.wurst.hack.tunneller": "自动挖一个隧道。\n\n§c§l警告：§r 尽管这个 AI 会自动避开岩浆和其他危险，但无法确保你不会死亡，除非你不介意一定概率失去你的全部物品。",
+  "description.wurst.hack.veinminer": "自动为你挖掘矿石矿脉。",
   "description.wurst.hack.x-ray": "透视矿物所在位置（请自行确保服务器内无假矿插件）。",
   "description.wurst.other_feature.nochatreports": "禁用自 1.19 以来附加到你的聊天消息的加密签名。\n\n§c§l警告：§c如果你发送聊天消息并附加签名, §c你的 Minecraft 帐号将可以被举报，从而被禁止访问多人游戏!§r\n\n即使你在聊天中说的话并无恶意，你的消息也可能被批量举报从而导致你的账户被封禁。\n\n如果你必须重新启用聊天签名才能加入服务器，请考虑不在此服务器发言。或者使用你不介意被封禁的小号进行游戏。",
   "button.wurst.nochatreports.disable_signatures": "禁用签名",
   "button.wurst.nochatreports.re-enable_signatures": "重新启用签名",
   "description.wurst.setting.generic.attack_speed": "以每秒点击次数计算的攻击速度。\n0 = 根据你的攻击冷却时间动态调整攻击速度。",
+  "description.wurst.setting.generic.face_target.off": "完全不朝向目标。会被反作弊插件检测到。",
+  "description.wurst.setting.generic.face_target.server": "服务器端朝向目标，客户端仍可自由移动相机。",
+  "description.wurst.setting.generic.face_target.client": "通过客户端移动相机朝向目标。最接近正常操作，但可能造成视觉混乱。",
+  "description.wurst.setting.generic.face_target.spam": "服务器端朝向目标，并每次发送单独数据包。可能规避部分（有缺陷的）反作弊插件，但更可能被踢出服务器。",
+  "description.wurst.setting.generic.filter_allays_combat": "不会攻击悦灵。",
+  "description.wurst.setting.generic.filter_allays_vision": "不会显示悦灵。",
+  "description.wurst.setting.generic.filter_armor_stands_combat": "不会攻击盔甲架。",
+  "description.wurst.setting.generic.filter_armor_stands_vision": "不会显示盔甲架。",
+  "description.wurst.setting.generic.filter_bats_combat": "不会攻击蝙蝠及模组添加的其他“环境类”生物。",
+  "description.wurst.setting.generic.filter_bats_vision": "不会显示蝙蝠及模组添加的其他“环境类”生物。",
+  "description.wurst.setting.generic.filter_crystals_combat": "不会攻击末影水晶。",
+  "description.wurst.setting.generic.filter_endermen_combat": "设置为 §l开启§r 时，完全不攻击末影人。\n\n设置为 §l仅平静时§r 时，末影人未主动攻击前不攻击它。注意：此筛选无法检测末影人攻击的是你还是他人。\n\n设置为 §l关闭§r 时，无限制，可攻击末影人。",
+  "description.wurst.setting.generic.filter_endermen_vision": "设置为 §l开启§r 时，完全不显示末影人。\n\n设置为 §l仅平静时§r 时，末影人未攻击任何目标前不显示它。\n\n设置为 §l关闭§r 时，无限制，可显示末影人。",
+  "description.wurst.setting.generic.filter_flying_combat": "不会攻击距离地面超过设定高度的飞行玩家。\n\n适用于通过放置飞行机器人检测作弊的服务器。",
+  "description.wurst.setting.generic.filter_golems_combat": "不会攻击铁傀儡和雪傀儡。",
+  "description.wurst.setting.generic.filter_golems_vision": "不会显示铁傀儡和雪傀儡。",
+  "description.wurst.setting.generic.filter_invisible_combat": "不会攻击隐身实体。",
+  "description.wurst.setting.generic.filter_invisible_vision": "不会显示隐身实体。",
+  "description.wurst.setting.generic.filter_named_combat": "不会攻击带有命名牌的实体。",
+  "description.wurst.setting.generic.filter_named_vision": "不会显示带有命名牌的实体。",
+  "description.wurst.setting.generic.filter_neutral_combat": "设置为 §l开启§r 时，完全不攻击中立生物。\n\n设置为 §l仅平静时§r 时，中立生物未主动攻击前不攻击它。注意：此筛选无法检测中立生物攻击的是你还是他人。\n\n设置为 §l关闭§r 时，无限制，可攻击中立生物。",
+  "description.wurst.setting.generic.filter_neutral_vision": "设置为 §l开启§r 时，完全不显示中立生物。\n\n设置为 §l仅平静时§r 时，中立生物未攻击任何目标前不显示它。\n\n设置为 §l关闭§r 时，无限制，可显示中立生物。",
+  "description.wurst.setting.generic.filter_pets_combat": "不会攻击已驯服的狼、马等宠物。",
+  "description.wurst.setting.generic.filter_pets_vision": "不会显示已驯服的狼、马等宠物。",
+  "description.wurst.setting.generic.filter_players_combat": "不会攻击其他玩家。",
+  "description.wurst.setting.generic.filter_players_vision": "不会显示其他玩家。",
+  "description.wurst.setting.generic.filter_shulker_bullets_combat": "不会攻击潜影贝子弹。",
+  "description.wurst.setting.generic.filter_shulkers_combat": "不会攻击潜影贝。",
+  "description.wurst.setting.generic.filter_shulkers_vision": "不会显示潜影贝。",
+  "description.wurst.setting.generic.filter_sleeping_combat": "不会攻击正在睡觉的玩家。\n\n适用于 Mineplex 等将睡觉玩家放置在地面模拟尸体的服务器。",
+  "description.wurst.setting.generic.filter_sleeping_vision": "不会显示正在睡觉的玩家。",
+  "description.wurst.setting.generic.filter_villagers_combat": "不会攻击村民和流浪商人。",
+  "description.wurst.setting.generic.filter_villagers_vision": "不会显示村民和流浪商人。",
+  "description.wurst.setting.generic.filter_zombie_piglins_combat": "设置为 §l开启§r 时，完全不攻击僵尸猪灵。\n\n设置为 §l仅平静时§r 时，僵尸猪灵未主动攻击前不攻击它。注意：此筛选无法检测僵尸猪灵攻击的是你还是他人。\n\n设置为 §l关闭§r 时，无限制，可攻击僵尸猪灵。",
+  "description.wurst.setting.generic.filter_zombie_piglins_vision": "设置为 §l开启§r 时，完全不显示僵尸猪灵。\n\n设置为 §l仅平静时§r 时，僵尸猪灵未攻击任何目标前不显示它。\n\n设置为 §l关闭§r 时，无限制，可显示僵尸猪灵。",
+  "description.wurst.setting.generic.filter_zombie_villagers_combat": "不会攻击僵尸村民。",
+  "description.wurst.setting.generic.filter_zombie_villagers_vision": "不会显示僵尸村民。",
   "description.wurst.setting.generic.pause_attack_on_containers": "当一个容器界面（如箱子、漏洞等）打开时不会攻击。\n在一些显示容器界面作为菜单的小游戏服务器很有用。",
+  "description.wurst.setting.generic.swing_hand_mining": "%s 在挖掘时应如何挥动你的手。",
+  "description.wurst.setting.generic.swing_hand_combat": "%s 在攻击时应如何挥动你的手。",
+  "description.wurst.setting.generic.swing_hand.off": "完全不挥动手。会被反作弊插件检测到。",
+  "description.wurst.setting.generic.swing_hand.server": "服务器端挥动手，客户端不播放动画。",
+  "description.wurst.setting.generic.swing_hand.client": "客户端挥动手。最接近正常操作。",
   "description.wurst.altmanager.premium": "这个账户拥有密码，且可以加入所有服务器。",
   "description.wurst.altmanager.cracked": "这个账户没有密码，只能加入盗版服务器。",
   "description.wurst.altmanager.failed": "上次你尝试登录这个账户，但是它不起作用。",
