--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -137,6 +137,7 @@
   "description.wurst.setting.follow.filter_minecarts": "Won't follow minecarts.",
   "description.wurst.hack.forceop": "Cracks AuthMe passwords.\nCan be used to get OP.",
   "description.wurst.hack.freecam": "Allows you to move the camera without moving your character.",
+  "description.wurst.setting.freecam.disable_on_damage": "Automatically turns off Freecam when you take damage.",
   "description.wurst.hack.fullbright": "Allows you to see in the dark.",
   "description.wurst.hack.glide": "Makes you glide down slowly when falling.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
   "description.wurst.hack.handnoclip": "Allows you to reach specific blocks through walls.",
