Improve Freecam's speed settings

--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -137,6 +137,11 @@
   "description.wurst.setting.follow.filter_minecarts": "Won't follow minecarts.",
   "description.wurst.hack.forceop": "Cracks AuthMe passwords.\nCan be used to get OP.",
   "description.wurst.hack.freecam": "Allows you to move the camera without moving your character.",
+  "description.wurst.setting.freecam.horizontal_speed": "Horizontal movement speed when using Freecam.",
+  "description.wurst.setting.freecam.vertical_speed": "Vertical movement speed when using Freecam (relative to horizontal).",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "Changes your speed when you scroll the mouse wheel.",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "Displays your current horizontal and vertical speed in the HackList.",
+  "description.wurst.setting.freecam.tracer": "Draws a line to your character's actual position.",
   "description.wurst.setting.freecam.disable_on_damage": "Automatically turns off Freecam when you take damage.",
   "description.wurst.hack.fullbright": "Allows you to see in the dark.",
   "description.wurst.hack.glide": "Makes you glide down slowly when falling.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
