--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -87,6 +87,11 @@
   "description.wurst.hack.follow": "Ein Bot, der automatisch dem nächstliegenden Mob oder Spieler hinterherläuft.\nSehr nervig.\n\nBenutze .follow, um einem bestimmten Mob oder Spieler zu folgen.",
   "description.wurst.hack.forceop": "Knackt AuthMe-Passwörter.\nKann benutzt werden, um OP zu bekommen.",
   "description.wurst.hack.freecam": "Ermöglicht dir, die Kamera unabhängig von der Spielfigur zu bewegen.",
+  "description.wurst.setting.freecam.horizontal_speed": "Horizontale Bewegungsgeschwindigkeit während du Freecam benutzt.",
+  "description.wurst.setting.freecam.vertical_speed": "Vertikale Bewegungsgeschwindigkeit während du Freecam benutzt (relativ zur horizontalen).",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "Ändert deine Geschwindigkeit, wenn du das Mausrad scrollst.",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "Zeigt deine aktuelle horizontale und vertikale Geschwindigkeit in der HackList an.",
+  "description.wurst.setting.freecam.tracer": "Rendert eine Linie zur tatsächlichen Position deiner Spielfigur.",
   "description.wurst.setting.freecam.disable_on_damage": "Schaltet Freecam automatisch aus, wenn du Schaden nimmst.",
   "description.wurst.hack.fullbright": "Ermöglicht dir, im Dunkeln zu sehen.",
   "description.wurst.hack.glide": "Lässt dich beim Fallen langsam nach unten gleiten.\n\n§c§lWARNUNG:§r Du bekommst immer noch Fallschaden, wenn du nicht NoFall benutzt.",
