Update Flight's speed settings to match Freecam's

--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -118,6 +118,14 @@
   "description.wurst.hack.fightbot": "A bot that automatically walks around and kills everything.\nGood for MobArena.",
   "description.wurst.hack.fish": "Disables underwater gravity so you can swim like a fish.",
   "description.wurst.hack.flight": "Allows you to fly.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
+  "description.wurst.setting.flight.horizontal_speed": "Horizontal movement speed when using Flight.",
+  "description.wurst.setting.flight.vertical_speed": "Vertical movement speed when using Flight (relative to horizontal).",
+  "description.wurst.setting.flight.allow_unsafe_vertical_speed": "Allows the vertical speed to go higher than 3.95 in Survival Mode, which will cause you to take fall damage even with NoFall enabled.",
+  "description.wurst.setting.flight.scroll_to_change_speed": "Changes your speed when you scroll the mouse wheel.\n\n§lNote:§r When enabled, scrolling the mouse wheel while flying will no longer change your selected hotbar item.",
+  "description.wurst.setting.flight.show_speed_in_hacklist": "Displays your current horizontal and vertical speed in the HackList.",
+  "description.wurst.setting.flight.anti-kick": "Makes you fall a little bit every now and then to prevent you from getting kicked.",
+  "description.wurst.setting.flight.anti-kick_interval": "How often Anti-Kick should prevent you from getting kicked.\nMost servers will kick you after 80 ticks.",
+  "description.wurst.setting.flight.anti-kick_distance": "How far Anti-Kick should make you fall.\nMost servers require at least 0.032m to stop you from getting kicked.",
   "description.wurst.hack.follow": "A bot that follows the closest entity.\nVery annoying.\n\nUse .follow to follow a specific entity.",
   "description.wurst.setting.follow.filter_players": "Won't follow other players.",
   "description.wurst.setting.follow.filter_sleeping": "Won't follow sleeping players.",
