--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -84,6 +84,14 @@
   "description.wurst.hack.fightbot": "Ein Bot, der automatisch durch die Gegend läuft und alles killt.\nGut für MobArena.",
   "description.wurst.hack.fish": "Schaltet unter Wasser die Schwerkraft aus, sodass du wie ein Fisch schwimmen kannst.",
   "description.wurst.hack.flight": "Lässt dich fliegen.\n\n§c§lWARNUNG:§r Du bekommst immer noch Fallschaden, wenn du nicht NoFall benutzt.",
+  "description.wurst.setting.flight.horizontal_speed": "Horizontale Bewegungsgeschwindigkeit während du Flight benutzt.",
+  "description.wurst.setting.flight.vertical_speed": "Vertikale Bewegungsgeschwindigkeit während du Flight benutzt (relativ zur horizontalen).",
+  "description.wurst.setting.flight.allow_unsafe_vertical_speed": "Erlaubt vertikale Geschwindigkeiten über 3.95 im Survivalmodus, was dazu führt, dass du Fallschaden nimmst, selbst wenn NoFall aktiviert ist.",
+  "description.wurst.setting.flight.scroll_to_change_speed": "Ändert deine Geschwindigkeit, wenn du das Mausrad scrollst.\n\n§lHinweis:§r Wenn das aktiviert ist, kannst du durch Scrollen beim Fliegen nicht mehr dein ausgewähltes Hotbar-Item wechseln.",
+  "description.wurst.setting.flight.show_speed_in_hacklist": "Zeigt deine aktuelle horizontale und vertikale Geschwindigkeit in der HackList an.",
+  "description.wurst.setting.flight.anti-kick": "Lässt dich ab und zu ein kleines Stück fallen, um zu verhindern, dass du gekickt wirst.",
+  "description.wurst.setting.flight.anti-kick_interval": "Wie oft Anti-Kick verhindern soll, dass du gekickt wirst.\nDie meisten Server kicken dich nach 80 Ticks.",
+  "description.wurst.setting.flight.anti-kick_distance": "Wie weit Anti-Kick dich fallen lassen soll.\nDie meisten Server benötigen mindestens 0.032m, um dich nicht zu kicken.",
   "description.wurst.hack.follow": "Ein Bot, der automatisch dem nächstliegenden Mob oder Spieler hinterherläuft.\nSehr nervig.\n\nBenutze .follow, um einem bestimmten Mob oder Spieler zu folgen.",
   "description.wurst.hack.forceop": "Knackt AuthMe-Passwörter.\nKann benutzt werden, um OP zu bekommen.",
   "description.wurst.hack.freecam": "Ermöglicht dir, die Kamera unabhängig von der Spielfigur zu bewegen.",
