Make keyboard hint tooltip strings translatable

--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -169,5 +169,9 @@
   "description.wurst.nochatreports.message_is_reportable": "Diese Nachricht hat eine gültige Signatur und kann daher für betrügerische Chat-Reports missbraucht werden.",
   "gui.wurst.generic.allcaps_blocked": "BLOCKIERT",
   "gui.wurst.generic.allcaps_allowed": "ERLAUBT",
+  "gui.wurst.generic.ctrl_left_click_for_precise_input": "§e[Strg]§r+§e[Linksklick]§r für präzise Eingabe",
+  "gui.wurst.generic.left_click_to_edit": "§e[Linksklick]§r zum Bearbeiten",
+  "gui.wurst.generic.right_click_to_reset": "§e[Rechtsklick]§r zum Zurücksetzen",
+  "gui.wurst.generic.unknown_block": "§ounbekannter Block§r",
   "key.wurst.zoom": "Zoom"
 }
