--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -106,6 +106,7 @@
   "description.wurst.hack.fastladder": "Allows you to climb up ladders faster.",
   "description.wurst.hack.fastplace": "Allows you to place blocks 5 times faster.\nTip: This can speed up other hacks like AutoBuild.",
   "description.wurst.hack.feedaura": "Automatically feeds animals around you.",
+  "description.wurst.hack.shearsaura": "Automatically shears sheep around you.",
   "description.wurst.hack.fightbot": "A bot that automatically walks around and kills everything.\nGood for MobArena.",
   "description.wurst.hack.fish": "Disables underwater gravity so you can swim like a fish.",
   "description.wurst.hack.flight": "Allows you to fly.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
