--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -150,6 +150,7 @@
   "description.wurst.setting.freecam.scroll_to_change_speed": "Changes your speed when you scroll the mouse wheel.",
   "description.wurst.setting.freecam.show_speed_in_hacklist": "Displays your current horizontal and vertical speed in the HackList.",
   "description.wurst.setting.freecam.tracer": "Draws a line to your character's actual position.",
+  "description.wurst.setting.freecam.hide_hand": "Hides your hand and held items while using Freecam.",
   "description.wurst.setting.freecam.disable_on_damage": "Automatically turns off Freecam when you take damage.",
   "description.wurst.hack.fullbright": "Allows you to see in the dark.",
   "description.wurst.hack.glide": "Makes you glide down slowly when falling.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
