Add "Initial position" setting to Freecam

--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -99,6 +99,10 @@
   "description.wurst.setting.freecam.vertical_speed": "Vertikale Bewegungsgeschwindigkeit während du Freecam benutzt (relativ zur horizontalen).",
   "description.wurst.setting.freecam.scroll_to_change_speed": "Ändert deine Geschwindigkeit, wenn du das Mausrad scrollst.",
   "description.wurst.setting.freecam.show_speed_in_hacklist": "Zeigt deine aktuelle horizontale und vertikale Geschwindigkeit in der HackList an.",
+  "description.wurst.setting.freecam.initial_position": "Wo die Kamera anfangs platziert wird, wenn du Freecam aktivierst.",
+  "description.wurst.setting.freecam.initial_position.inside": "Lässt die Kamera genau da, wo sie ist. Du wirst anfangs nur die Innenseite deiner Spielfigur sehen können.",
+  "description.wurst.setting.freecam.initial_position.in_front": "Bewegt die Kamera ein bisschen nach vorne, damit du besser sehen kannst.",
+  "description.wurst.setting.freecam.initial_position.above": "Bewegt die Kamera ein bisschen nach oben, damit du besser sehen kannst.",
   "description.wurst.setting.freecam.tracer": "Rendert eine Linie zur tatsächlichen Position deiner Spielfigur.",
   "description.wurst.setting.freecam.hide_hand": "Blendet deine Hand und Items die du hältst aus, während du Freecam benutzt.",
   "description.wurst.setting.freecam.disable_on_damage": "Schaltet Freecam automatisch aus, wenn du Schaden nimmst.",
