--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -149,6 +149,10 @@
   "description.wurst.setting.freecam.vertical_speed": "Vertical movement speed when using Freecam (relative to horizontal).",
   "description.wurst.setting.freecam.scroll_to_change_speed": "Changes your speed when you scroll the mouse wheel.",
   "description.wurst.setting.freecam.show_speed_in_hacklist": "Displays your current horizontal and vertical speed in the HackList.",
+  "description.wurst.setting.freecam.initial_position": "Where to initially place the camera when you enable Freecam.",
+  "description.wurst.setting.freecam.initial_position.inside": "Keep the camera exactly where it is. You will only see the inside of your character until you move.",
+  "description.wurst.setting.freecam.initial_position.in_front": "Move the camera forward a bit so you can see better.",
+  "description.wurst.setting.freecam.initial_position.above": "Move the camera up a bit so you can see better.",
   "description.wurst.setting.freecam.tracer": "Draws a line to your character's actual position.",
   "description.wurst.setting.freecam.hide_hand": "Hides your hand and held items while using Freecam.",
   "description.wurst.setting.freecam.disable_on_damage": "Automatically turns off Freecam when you take damage.",
