--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -145,6 +145,8 @@
   "description.wurst.hack.snowshoe": "Ermöglicht dir, auf Pulverschnee zu laufen.",
   "description.wurst.setting.treebot.face_target": "Wie TreeBot zu den Holzstämmen und Blättern schauen soll, wenn er sie abbaut.",
   "description.wurst.other_feature.nochatreports": "Deaktiviert die kryptografischen Signaturen, die seit 1.19 an deine Chat-Nachrichten angehängt sind.\n\n§c§lWARNUNG: §cWenn §cdu §cChat-Nachrichten §cmit §cSignaturen §csendest, §ckann §cdein §cMinecraft-Account §cgemeldet §cund §cglobal §cvom §cMultiplayer §cverbannt §cwerden!§r\n\nSelbst wenn du immer nur harmlosere Dinge im Chat sagst, können deine signierten Nachrichten missbraucht werden um einen gefälschten Chat-Report zu erstellen, durch den dein Account dann trotzdem gesperrt wird.\n\nWenn du die Chat-Signaturen wieder aktivieren musst um auf einem Server zu chatten, solltest du in Erwägung ziehen, einen Alt-Account zu benutzen, bei dem es dir egal ist wenn du ihn verlierst.",
+  "description.wurst.other_feature.wurstoptions": "Das primäre Konfigurationsmenü von Wurst.\n\nWenn du dich jemals aus der GUI aussperrst, indem du deine Keybinds löschst, kannst du sie hier wiederherstellen.",
+  "description.wurst.setting.wurstoptions.location": "Wo der \"Wurst Options\"-Button angezeigt werden soll.",
   "button.wurst.nochatreports.disable_signatures": "Signaturen deaktivieren",
   "button.wurst.nochatreports.re-enable_signatures": "Signaturen wieder aktivieren",
   "description.wurst.setting.generic.attack_speed": "Angriffsgeschwindigkeit in Klicks pro Sekunde.\n0 = Geschwindigkeit passt sich dynamisch an deine Abklingzeit an.",
