Add "Apply input to" setting to Freecam

--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -95,10 +95,13 @@
   "description.wurst.hack.follow": "Ein Bot, der automatisch dem nächstliegenden Mob oder Spieler hinterherläuft.\nSehr nervig.\n\nBenutze .follow, um einem bestimmten Mob oder Spieler zu folgen.",
   "description.wurst.hack.forceop": "Knackt AuthMe-Passwörter.\nKann benutzt werden, um OP zu bekommen.",
   "description.wurst.hack.freecam": "Ermöglicht dir, die Kamera unabhängig von der Spielfigur zu bewegen.",
-  "description.wurst.setting.freecam.horizontal_speed": "Horizontale Bewegungsgeschwindigkeit während du Freecam benutzt.",
-  "description.wurst.setting.freecam.vertical_speed": "Vertikale Bewegungsgeschwindigkeit während du Freecam benutzt (relativ zur horizontalen).",
-  "description.wurst.setting.freecam.scroll_to_change_speed": "Ändert deine Geschwindigkeit, wenn du das Mausrad scrollst.",
-  "description.wurst.setting.freecam.show_speed_in_hacklist": "Zeigt deine aktuelle horizontale und vertikale Geschwindigkeit in der HackList an.",
+  "description.wurst.setting.freecam.apply_input_to": "Was deine Tastatur- und Mauseingaben tun sollen, während Freecam aktiv ist.",
+  "description.wurst.setting.freecam.apply_input_to.camera": "Bewegt die Kamera, während deine Spielfigur stillsteht.",
+  "description.wurst.setting.freecam.apply_input_to.player": "Bewegt deine Spielfigur, während die Kamera stillsteht.",
+  "description.wurst.setting.freecam.horizontal_speed": "Horizontale Geschwindigkeit von Kamerabewegungen während du Freecam benutzt.\n\nHat keine Wirkung, wenn §lApply §linput §lto§r auf §lPlayer§r gesetzt ist.",
+  "description.wurst.setting.freecam.vertical_speed": "Vertikale Geschwindigkeit von Kamerabewegungen während du Freecam benutzt (relativ zur horizontalen).\n\nHat keine Wirkung, wenn §lApply §linput §lto§r auf §lPlayer§r gesetzt ist.",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "Ändert deine Kamerageschwindigkeit, wenn du das Mausrad scrollst.\n\nHat keine Wirkung, wenn §lApply §linput §lto§r auf §lPlayer§r gesetzt ist.",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "Zeigt deine aktuelle horizontale und vertikale Kamerageschwindigkeit in der HackList an.",
   "description.wurst.setting.freecam.initial_position": "Wo die Kamera anfangs platziert wird, wenn du Freecam aktivierst.",
   "description.wurst.setting.freecam.initial_position.inside": "Lässt die Kamera genau da, wo sie ist. Du wirst anfangs nur die Innenseite deiner Spielfigur sehen können.",
   "description.wurst.setting.freecam.initial_position.in_front": "Bewegt die Kamera ein bisschen nach vorne, damit du besser sehen kannst.",
