--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -145,10 +145,13 @@
   "description.wurst.setting.follow.filter_minecarts": "Won't follow minecarts.",
   "description.wurst.hack.forceop": "Cracks AuthMe passwords.\nCan be used to get OP.",
   "description.wurst.hack.freecam": "Allows you to move the camera without moving your character.",
-  "description.wurst.setting.freecam.horizontal_speed": "Horizontal movement speed when using Freecam.",
-  "description.wurst.setting.freecam.vertical_speed": "Vertical movement speed when using Freecam (relative to horizontal).",
-  "description.wurst.setting.freecam.scroll_to_change_speed": "Changes your speed when you scroll the mouse wheel.",
-  "description.wurst.setting.freecam.show_speed_in_hacklist": "Displays your current horizontal and vertical speed in the HackList.",
+  "description.wurst.setting.freecam.apply_input_to": "What your keyboard and mouse inputs should do while Freecam is active.",
+  "description.wurst.setting.freecam.apply_input_to.camera": "Moves the camera around while your character stays still.",
+  "description.wurst.setting.freecam.apply_input_to.player": "Moves your character while the camera stays still.",
+  "description.wurst.setting.freecam.horizontal_speed": "Horizontal camera movement speed when using Freecam.\n\nDoes nothing when §lApply §linput §lto§r is set to §lPlayer§r.",
+  "description.wurst.setting.freecam.vertical_speed": "Vertical camera movement speed when using Freecam (relative to horizontal).\n\nDoes nothing when §lApply §linput §lto§r is set to §lPlayer§r.",
+  "description.wurst.setting.freecam.scroll_to_change_speed": "Changes your camera movement speed when you scroll the mouse wheel.\n\nDoes nothing when §lApply §linput §lto§r is set to §lPlayer§r.",
+  "description.wurst.setting.freecam.show_speed_in_hacklist": "Displays your current horizontal and vertical camera movement speed in the HackList.",
   "description.wurst.setting.freecam.initial_position": "Where to initially place the camera when you enable Freecam.",
   "description.wurst.setting.freecam.initial_position.inside": "Keep the camera exactly where it is. You will only see the inside of your character until you move.",
   "description.wurst.setting.freecam.initial_position.in_front": "Move the camera forward a bit so you can see better.",
